--- a/portfolio project/index.html
+++ b/portfolio project/index.html
@@ -37,6 +37,7 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
+                <canvas id="c"></canvas>
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2"> Maria ibita M.</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
